test/Fail/TacticDataParamMismatch.err
TacticDataParamMismatch.agda:15.8-14: error: [UnequalTerms]
The terms
  D {41}
and
  D {42}
are not equal at type Set
when checking that the expression c {41} has type D
